# mycli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.md  config.example.yaml  pyproject.toml  setup.sh
docs/: DEVELOPMENT.md  QUICKSTART.md
src/mycli/: __init__.py  cli.py
src/mycli/ai/: __init__.py  base.py  openai.py
src/mycli/config/: __init__.py
src/mycli/core/: agent.py
src/mycli/repl/: __init__.py
src/mycli/storage/: __init__.py  database.py  models.py
src/mycli/utils/: logger.py
tests/: test_agent.py  test_config.py
